<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:kisdy="http://schemas.android.com/apk/res/com.kisdy.weixin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kisdy.weixin.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <com.kisdy.weixin.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            kisdy:icon="@drawable/ic_menu_start_conversation"
            kisdy:text="@string/str_app_name"
            kisdy:textsize="12sp"
            kisdy:color="@color/noraml" >
        </com.kisdy.weixin.view.ChangeColorIconWithText>

        <com.kisdy.weixin.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            kisdy:icon="@drawable/ic_menu_friendslist"
            kisdy:text="@string/str_tab_contact"
            kisdy:textsize="12sp"
            kisdy:color="@color/noraml" >
        </com.kisdy.weixin.view.ChangeColorIconWithText>

        <com.kisdy.weixin.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            kisdy:icon="@drawable/ic_menu_emoticons"
            kisdy:text="@string/str_tab_found"
            kisdy:textsize="12sp"
            kisdy:color="@color/noraml" >
        </com.kisdy.weixin.view.ChangeColorIconWithText>

        <com.kisdy.weixin.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            kisdy:icon="@drawable/ic_menu_allfriends"
            kisdy:text="@string/str_tab_me"
            kisdy:textsize="12sp"
            kisdy:color="@color/noraml" >
        </com.kisdy.weixin.view.ChangeColorIconWithText>
    </LinearLayout>

</LinearLayout>